Fixed the issue where the db entries had to be sequential with no gaps

--- a/WebContent/public/ref/app.css
+++ b/WebContent/public/ref/app.css
@@ -51,7 +51,7 @@ h1{
 }
 
 @media
-	only screen and (max-width: 760px),
+	only screen and (max-width: 660px),
 	(min-device-width: 768px) and (max-device-width: 1024px)  {
 
 		/* Force table to not be like tables anymore */
